# BiliLive-Utility

./: .gitignore  LICENSE  README.md  build.ps1  console.py  gui.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
scripts/: 0-replace-version.py  1-build.ps1  1-build.sh  2-create-dmg.sh  3-seticon  build.sh
src/: home.py  login.py  main.py
src/bililive_utility/: __main__.py  launcher.py
src/bililive_utility/api/: app_info.py  auth.py  live.py  models.py  room.py
src/bililive_utility/bilibili/: api.py  core.py  session.py
src/bililive_utility/context/: path.py  storage.py
src/bililive_utility/utils/: crypto.py  path.py  qr.py  version.py
static/: favicon.icns  index.html  script.js  styles.css
