[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bililive-utility"
version = "2.0.0"
authors = [
  { name="GamerNoTitle", email="GamerNoTitle@outlook.com" },
]
description = "BiliLive Utility is a tool that helps you manage your Bilibili live streams, including features like QR code login, stream management, and more, without being trapped by 5k fans requirement."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx[http2]",
    "platformdirs",
    "gitpython>=3.1.45",
    "qrcode>=7.4.2",
    "pillow>=10.4.0",
    "pywebview>=5.4",
    "pyinstaller>=6.14.2",
]

[project.scripts]
bililive-utility = "bililive_utility.__main__:main"
